# NiCimEngine

./: CMakeLists.txt  EnumsAndConstans.h  NegaMaxSearch.cpp  NegaMaxSearch.h  README.md  Randomnubers.cpp  attacks.h  bitboard.cpp  bitboard.h  board.h  evaluation.h  magicNumbers.cpp  magicNumbers.h  makefile  makefile123  timeController.cpp  uci.h  zorbiestKeys.h
resources/: resources.rc
src/: Attacks.cpp  Attacks.h  Bitboard.cpp  Bitboard.h  Board.cpp  Board.h  Evaluation.cpp  Evaluation.h  MagicNumbers.cpp  MagicNumbers.h  NegaMaxSearch.cpp  NegaMaxSearch.h  NnueEval.cpp  NnueEval.h  PerftTest.cpp  PerftTest.h  Pieces.cpp  PolyBook.cpp  PolyBook.h  PolyKeys.cpp  PolyKeys.h  RandomNumbers.cpp  RandomNumbers.h  Randomnubers.h  Search.cpp  Search.h  TimeController.cpp  TimeController.h  TranspositionTable.cpp  TranspositionTable.h  Uci.cpp  Uci.h  ZorbiestKeys.cpp  ZorbiestKeys.h  attacks.cpp  board.cpp  evaluation.cpp  main.cpp  perftTest.cpp  perftTest.h  (+7 more)
src/nnue/: nnue.h
